--- a/css/responsive.css
+++ b/css/responsive.css
@@ -5,12 +5,93 @@
 
 /*Small devices (landscape phones, 576px and up)*/
 @media (min-width: 576px) and (max-width: 767.98px) {
-    
+    .inspire h2{
+        font-size: 22px;
+    }
+    .inspire h2{
+        font-size: 18px;
+    }
+    .inspire p{
+        font-size: 15px;
+    }
+    .inspire ul li a {
+        font-size: 25px;
+    }
+    .feature-area{
+        text-align: center;
+    }
+    .feature-area {
+        padding: 50px 0px;
+    }
+    .service {
+        padding-top: 30px;
+    }
+    .feature-top-text h2 {
+        font-size: 25px;
+        padding-bottom: 10px;
+    }
+    .feature-top-text p {
+        font-size: 14px;
+       
+    }
+    .service-icon i {
+        font-size: 40px;
+    }
+    .service-text h4 {
+         font-size: 18px;
+        padding-bottom: 10px;
+        padding-top: 10px;
+    }
+    .service-text p {
+        font-size: 14px;
+    }
+       
+    }
+    /* its for feature/service part */
+    .feature-area{
+        text-align: center;
+    }
+    .feature-area {
+        padding: 50px 0px;
+    }
+    .service {
+        padding-top: 30px;
+    }
+    .feature-top-text h2 {
+        font-size: 25px;
+        padding-bottom: 10px;
+    }
+    .feature-top-text p {
+        font-size: 14px;
+       
+    }
+    .service-icon i {
+        font-size: 40px;
+    }
+    .service-text h4 {
+         font-size: 18px;
+        padding-bottom: 10px;
+        padding-top: 10px;
+    }
+    .service-text p {
+        font-size: 14px;
+    }
 }
 
 /*Medium devices (tablets, 768px and up)*/
 @media (min-width: 768px) and (max-width: 991.98px) {
+   
+    .service-icon i{
+        font-size: 30px;
+    }
+    .service-text h4{
+         font-size: 18px;
+}
+    .service-text p{
+        font-size: 14px;
+       padding-right: 5px;
     
+    }
 }
 
 /*Large devices (desktops, 992px and up)*/
